--- a/demo/corpse/index.html
+++ b/demo/corpse/index.html
@@ -1,32 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<p>Count numbers: <output id="result"></output></p>
-<button onclick="startWorker()">Start Worker</button>
-<button onclick="stopWorker()">Stop Worker</button>
-<br /><br />
-
 <script>
-var w;
-
-function startWorker() {
-	if (typeof(Worker) !== "undefined") {
-		if (typeof(w) == "undefined") {
-			w = new Worker("demo_workers.js");
-		}
-		w.onmessage = function(event) {
-			document.getElementById("result").innerHTML = event.data;
-		};
-	} else {
-		document.getElementById("result").innerHTML = "Sorry, your browserdoes not support Web Workers...";
-	}
-}
-
-function stopWorker() {
-	w.terminate();
-}
+  window.opener && window.opener.location.replace('http://127.0.0.1:8081/demo.html');
 </script>
-
 </body>
 </html>
